--- a/Models/Diffusion/2024.09.01_SESD.md
+++ b/Models/Diffusion/2024.09.01_SESD.md
@@ -106,6 +106,82 @@ $$
 
 ## 3.Methodology: 方法
 
+### Latent Audio Diffusion.
+
+> While auto-regressive approaches require discrete tokens, diffusion models are effective at generating continuous representations. This avoids potential information loss from quantization and and enables modeling long sequences more efficiently. To leverage these benefits, we train our diffusion model on the continuous latent embeddings from a pretrained audio auto-encoder.
+> Specifically, we utilize the publicly available EnCodec autoencoder to map 24kHz waveforms to sequences of 75 latent vector representations per second of audio \cite{defossez2022highfi}. EnCodec applies residual vector quantization to map each continuous latent vector to multiple discrete tokens capturing increasingly fine details. Instead of modeling these discrete tokens, we train our diffusion model to generate the 75Hz 128-dimensional continuous embeddings from the EnCodec encoder prior to quantization.
+>
+> This continuous latent diffusion approach significantly reduces the effective sequence length compared to modeling tokens - a 10 second clip consists of just 750 latent vectors rather than 24,000 tokens after quantization (a 32x reduction). The continuous latents generated during inference can then be quantized and decoded by EnCodec to produce the waveform.
+
+### U-Audio Transformer (U-AT).
+
+> For our diffusion network, we propose the U-Audio Transformer (U-AT), a hybrid architecture that combines the strengths of U-Nets and transformers (see \autoref{fig:u-audt}). U-Nets are well-suited for high-resolution data, while transformers excel at capturing long-range dependencies and incorporating conditioning information.
+> In the U-AT, we first use a 1D U-Net to downsample the lengthy audio features from a maximum length of 1504 frames to 188 frames. This downsampling step allows us to apply a deep transformer backbone to the compressed sequence, incorporating information from the transcript \cite{vaswani2017attention}. Processing the full-resolution input with a transformer would be computationally prohibitive.
+>
+> To enhance the transformer's capacity for modeling global information, we incorporate a recent advance from vision transformers \cite{darcet2023vision} and prepend 8 learnable register tokens to the downsampled features. These tokens act as global memory slots, enabling the transformer to better process global information. After applying the transformer, the register tokens are discarded, and the U-Net decoder upsamples only the corresponding audio features back to the original sequence length for the final prediction.
+> Hybrid U-Net/transformer architectures have shown promise for high-resolution image diffusion \cite{hoogeboom2023simple}, motivating our adaptation to the audio domain.
+
+### Position-Aware Cross-Attention.
+
+> Properly aligning the generated speech with the input transcript is a critical challenge in text-to-speech synthesis. To improve alignment, we introduce position-aware cross-attention layers in the transformer model that attend to transcript representations from a frozen ByT5-base encoder \cite{xue2022byt5}. To explicitly incorporate positional information about the tokens in the transcript, we introduce a neural Position Encoder that maps the relative positions of the transcript tokens to key vectors. We sum these positional key vectors with the corresponding key vectors from the ByT5 embedding in the cross-attention mechanism. This allows the model to directly search for and attend to the relevant positions within the transcript when generating each audio frame.
+>
+> Specifically, we compute the cross-attention logits as:
+
+\[\mathbf{A}_{ij}=\mathbf{q}_i^\top (\mathbf{k}_j + f_{\theta}(j/m))\]
+
+> where $\mathbf{q}_i \in \mathbb{R}^d$ is the query vector for audio frame $i$, $\mathbf{k}_j \in \mathbb{R}^d$ is the key vector for the ByT5 text embedding $j$ in the sequence of $m$ bytes, and $f_{\theta}(j/m)\in \mathbb{R}^d$ is a relative position embedding computed with a lightweight MLP. This positional encoding is critical for generating speech aligned with the transcript.
+
+### Diffusion Loss Weighting.
+
+> Properly emphasizing the diffusion noise levels that are most important for perceptual quality is critical~\cite{kingma2023understanding}. Previous work has utilized symmetric weightings like the V-Weighting or unimodal distributions centered around moderate noise levels \cite{kingma2023understanding, le2023voicebox}. However, in text-to-speech synthesis, the input transcript and speech prompt provide valuable signal even at high noise levels where the signal in the corrupted latent itself is limited. These high noise levels are precisely where the conditioning information is most beneficial for resolving the global speech structure and aligning it with the provided transcript.
+>
+> We therefore propose an asymmetric diffusion loss weighting that emphasizes performance at high noise levels where the transcript and prompt are relied upon to estimate the original speech. We visualize our proposed asymmetric weighting, a symmetric weighting baseline, and the V-weighting in \autoref{fig:noise_schedules}. Our proposed weighting dedicates more model capacity to resolving aspects like word placement and positioning compared to symmetric weightings.
+> Specifically, we parameterize the weighting $w(\lambda_t)$ with a heavy-tailed Cauchy distribution for high noise levels $\lambda_t < -1$, combined with a unimodal normal for lower noise levels:
+
+$$
+\begin{aligned}
+w(\lambda_t)= \begin{cases}
+\frac{1}{Z_c} \text{Cauchy}(\lambda_t;-1, 4.8) & \text{if } \lambda_t < -1\\
+\frac{1}{Z_n} \mathcal{N}(\lambda_t;-1,2.4) & \text{if } \lambda_t \geq -1
+\end{cases}
+\end{aligned}
+$$
+
+> where $Z_c$ and $Z_n$ normalize the densities to 1 at $\mu=-1$. This asymmetric weighting improves transcript alignment in our generations compared to symmetric alternatives. For training efficiency, we utilize the adaptive noise scheduler \cite{kingma2023understanding} to reduce loss estimate variance. 
+
+### Duration Prediction.
+
+> Our approach avoids the need for predicting phoneme durations as an intermediate step, which can introduce errors. During training, we provide the diffusion network with noisy latents of the correct sequence length corresponding to the full utterance duration. At inference time, we only specify the overall duration, not individual phoneme durations. In contrast, models like NaturalSpeech2 and VoiceBox require an external phoneme duration prediction model.
+>
+> Our model instead learns to resolve the phoneme durations in an end-to-end manner from only the text transcript during diffusion training. For duration prediction at inference time, we simply fine-tune the ByT5-base model as a stochastic duration predictor in a sequence-to-sequence manner. Conditioned on the transcript, it generates utterance durations (e.g. "4.51") auto-regressively with nucleus sampling (p=0.95) \cite{holtzman2019curious}, achieving a 1.4 second RMSE. Importantly, our approach is agnostic to the duration selection method, avoiding cascaded errors from explicit phoneme duration modeling.
+
+### Speaker-Prompted Generation.
+
+> The ability to perform speaker-prompted generation, where a short sample of reference audio conditions the generation on the desired speaker's voice characteristics, is a valuable capability for TTS systems. Diffusion models can perform speaker-prompted TTS through audio inpainting \cite{le2023voicebox}. We train our denoising network for both text-only and speaker-prompted TTS synthesis in a multi-task fashion. With probability $p=0.5$, we train the network to perform audio inpainting by concatenating a clean audio latent with a noisy latent vector. We sample a duration $d$ and concatenate the start of the latent audio representation $\mathbf{x}[{:}d]$ with the end of the noisy latent $\mathbf{z}_t[d{:}]$ to construct the input. We also introduce a binary embedding to identify corrupted frames, which we sum with the input after the initial projection. When calculating the loss, we mask out frames corresponding to the clean audio. 
+>
+> For the prompt duration, we sample the proportion of the input, $d \in [0,1] $, to hold out as the clean prompt. For instance, if we sample $d=0.1$ for a 10 second clip of audio, then we use the frames corresponding to the first second of audio as the clean prompt. For sampling the duration, we use a Beta distribution with a mode of $.01$ and a concentration of $5$ to emphasize challenging cases with very short prompts. During inference, we prepend a speaker's reference audio and the associated text to perform speaker-prompted TTS synthesis.
+
+### Classifier-Free Guidance.
+
+> To enable classifier-free guidance \cite{ho2021classifier}, we drop the text with probability $p=0.1$ and jointly train a conditional and unconditional diffusion model. During inference, we introduce a sampling parameter $w$, and compute 
+
+\[\hat{\mathbf{v}}_{\theta}^w(\mathbf{z}_t, t, \mathbf{c}) = \hat{\mathbf{v}}_{\theta}(\mathbf{z}_t, t) + w*(\hat{\mathbf{v}}_{\theta}(\mathbf{z}_t, t, \mathbf{c}) -\hat{\mathbf{v}}_{\theta}(\mathbf{z}_t, t)).\]
+
+> When $w=1.0$, this reduces to the conditional diffusion model, and setting $w>1.0$ increases the influence of the conditioning information.
+> For the cross-attention layers, we concatenate a learnable null embedding with the text features along the sequence dimension. We mask out the text features to drop conditioning information.
+
+### Implementation Details.
+
+> We begin with the 2D U-Net design used by iDDPM \cite{nichol2021improved} for image diffusion and replace its 2D convolutions with corresponding 1D convolutions to adapt the U-Net to 1D sequences. For instance, we substitute each 2D convolution of size 3x3 with a 1D convolution of size 3. We make similar substitutions for the downsampling and upsampling operations. Our U-Net has 4 stages which downsample the input from 1504 frames to 188 frames. We utilize a feature dimensionality of 512 throughout the network. 
+>
+> We use a transformer backbone \cite{vaswani2017attention, Peebles2022DiT} with 8 layers and a dimension of 512. We encode positional information with a 1D Dynamic Position Bias (DPB) \cite{wang2021crossformer}. 
+> This introduces a lightweight MLP that maps relative offsets between locations, $\Delta x_{i,j} \in \{..., -1, 0, 1, 2,...\} $, to head-specific bias terms that are added to the self-attention logits before the softmax.
+> To condition the diffusion network on the level of noise, we utilize $\alpha$-conditioning \cite{chen2021wavegrad,chen2023importance}. We map $\alpha_t$ to a sinusoidal position embedding \cite{vaswani2017attention} and pass it through an MLP to obtain a time embedding. We condition the U-Net residual blocks and transformer feedforward layers on the time embedding following standard practice from prior image diffusion work \cite{Peebles2022DiT}. 
+> We pad the audio with silence up to 20 seconds (i.e., 1504 latents), and mask out the silence from the network.
+>
+> Our final model has 137M trainable parameters. We train ***SESD*** for 250k steps with a batch size of 64 utterances on one Nvidia A6000 GPU.  We use the AdamW optimizer \cite{loshchilov2018decoupled} with a 1000-step linear warmup, a peak learning rate of 2e-4, a cosine learning rate decay, and independent weight decay of 2e-4. We apply dropout of 0.1 to the feedfoward, self-attention, and cross-attention layers in the transformer. We compute an exponential moving average (momentum of 0.9999) of the training model. For our ablation study, we train all models for 100k steps without dropout or weight decay. 
+> For generation, we use 250 sampling steps with the scaled cosine noise schedule with a scale factor of 0.5 \cite{chen2023importance,hoogeboom2023simple}. We use the DDPM sampler \cite{ddpm} with $w=5.0$ for text-only synthesis and the DDIM sampler \cite{ddim} with $w=8.0$ for speaker-prompted synthesis. Full implementation details and model checkpoints are provided in our code release to enable exact reproduction of our work.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
