--- a/Models/Diffusion/2024.09.01_SESD.md
+++ b/Models/Diffusion/2024.09.01_SESD.md
@@ -184,6 +184,19 @@ $$
 
 ## 4.Experiments: 实验
 
+> We utilize the clean and other training splits of the LibriSpeech (LS) dataset \cite{panayotov2015librispeech}, totaling 960 hours of speech, to train ***SESD***. For evaluation, we follow prior work \cite{wang2023neural, le2023voicebox} and consider a filtered subset of LS test-clean consisting of clips between four and ten seconds in length. For speaker-prompted TTS, we utilize a 3 second clip from another sample of the same speaker.
+
+### Baselines.
+
+> For text-only synthesis, we compare against VITS \cite{kim2021conditional}, a variational autoencoder with adversarial training. We consider both VITS variants: the single-speaker VITS-LJ trained on LJ Speech, and the multi-speaker VITS-VCTK trained on VCTK. 
+> We also compare against English MMS-TTS \cite{pratap2023scaling}, a recent single-speaker model. 
+> For speaker-prompted TTS, we compare against YourTTS \cite{casanova2022yourtts}, a VITS model conditioned on a speech prompt.
+> We follow the evaluation protocol of the recent state-of-the-art generative models such as VALL-E \cite{wang2023neural} and VoiceBox \cite{le2023voicebox} and compare against their reported metrics. We also compare against the speech-to-speech baselines GSLM and AudioLM \cite{lakhotia-etal-2021-generative, borsos2023audiolm}.
+
+### Evaluation Metrics. 
+
+> To evaluate the \textit{intelligibility} of the synthesized audio, we transcribe the speech with a pre-trained ASR model and compute the WER between the transcribed text and original transcript. We use the HuBERT-L model \cite{hsu2021hubert} employed by prior work \cite{wang2023neural, le2023voicebox}\footnote{\url{https://huggingface.co/facebook/hubert-large-ls960-ft}}. For speaker-prompted TTS, we evaluate the \textit{similarity} between the prompt and synthesized speech by utilizing the pre-trained speaker verification model from prior work\footnote{The WavLM-Large model released at \url{https://github.com/microsoft/UniSpeech/tree/main/downstreams/speaker_verification}.} \cite{wang2023neural, le2023voicebox}. We report the cosine similarity between speaker embeddings for the re-synthesized prompt and synthesized speech.
+
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
