--- a/Models/Diffusion/2024.09.01_SESD.md
+++ b/Models/Diffusion/2024.09.01_SESD.md
@@ -199,6 +199,10 @@ $$
 
 ## 5.Results: 结果
 
+> Our results in \autoref{tab:text-only} demonstrate that our method can generate intelligible speech in a text-only setting, nearly matching the word error rate of the ground truth audio. 
+> Our text-only WER surpasses that of the single-speaker models while providing the additional capability of multi-speaker synthesis. In the speaker-prompted setting, our model generates speech that maintains the characteristics of the prompt. Notably, ***SESD*** outperforms the SoTA auto-regressive system, VALL-E, in terms of both the WER and the neural speaker similarity metric, with less than 2\% the training data. We also match the performance of the latent diffusion NS2 system using 2.2\% of the training data. 
+> We demonstrate the importance of our various design decisions in \autoref{fig:ablation}. Our position-aware cross attention mechanism, model architecture, text encoder, and diffusion loss weighting are critical for generating intelligible speech.
+
 ## 6.Conclusions: 结论
 
 > We present ***SESD***, a highly sample-efficient latent diffusion framework for text-to-speech synthesis that achieves strong results in a modest data regime. 
