--- a/Models/Speech_Neural_Codec/2024.09.02_SoCodec.md
+++ b/Models/Speech_Neural_Codec/2024.09.02_SoCodec.md
@@ -51,6 +51,12 @@
 
 ## 1.Introduction: 引言
 
+> Large language models (LLMs) have demonstrated powerful capability in text generation \cite{brown2020language,openai2023gpt4,touvron2023llama2}. This breakthrough inspires applications of LLMs in speech generation, especially for zero-shot text-to-speech (TTS) synthesis, e.g., VALL-E \cite{VALLEX}, Tortoise \cite{tortoise}, BASE-TTS \cite{lajszczak2024base}, etc. These models treat TTS as a next-token prediction task by auto-regressively generating discrete speech tokens (codes). Hence, such a language-model-based TTS system, i.e. LM-TTS, usually relies on an audio codec system \cite{encodec, hifi-codec, dac}. It encodes speech signals into discrete speech tokens and reconstructs them back. Then, we train an LM to predict speech tokens from the text to achieve TTS synthesis. However, unlike the text, speech signals contain abundant information, including phonetics, prosody, speaker identity, acoustic environment, etc., making it challenging to compress into a token sequence as short as the text. The long sequence seriously affects the LM in terms of modeling complexity and efficiency, hindering its development in the speech domain.
+
+> In this work, we propose SoCodec, a semantic-ordered multi-stream speech codec, to provide a shorter token sequence for efficient LM-TTS. First, SoCodec leverages the self-supervised-learning-based model \cite{hsu2021hubert, wavlm} to compress speech signals into a multi-stream semantic sequence containing sufficient phonetic and prosodic information. Then, an utterance-level acoustic embedding is extracted from the Mel spectrogram to represent time-invariant acoustic information, including speaker identity, acoustic environment, etc. Meanwhile, we propose ordered product quantization (OPQ) for SoCodec to quantize speech into an ordered speech representation along the stream axis. It can be incorporated with a multi-stream LLM \cite{copet2024simple} based on a delayed pattern to achieve the high-quality and efficient zero-shot TTS, which is validated in both subjective and objective experiments.
+
+> Our contributions are summarized as follows: 1) we propose a new speech codec, SoCodec, providing a shorter speech sequence for efficient LM-TTS; 2) we propose ordered product quantization (OPQ) to learn an ordered multi-stream sequence to adapt multi-stream LM better; 3) we propose an LM-TTS system based on SoCodec, achieving higher efficiency while keeping high synthesis quality in TTS, even with a frameshift of only 240ms, the shortest sequence across all LM-TTS approaches to the best of our knowledge.
+
 ## 2.Related Works: 相关工作
 
 ## 3.Methodology: 方法
