--- a/Models/Speech_Neural_Codec/2024.09.02_SoCodec.md
+++ b/Models/Speech_Neural_Codec/2024.09.02_SoCodec.md
@@ -65,6 +65,75 @@
 
 ## 3.Methodology: 方法
 
+> In this section, we will give a detailed introduction to Semantic-Ordered Speech Codec (SoCodec), including the proposed ordered product quantization, the model architecture, and the loss function.
+
+### Ordered Product Quantization
+
+> Ordered representation learning \cite{rippel2014learning, xu2021anytime} aims to encode the input into a PCA-like representation, where the first dimension represents the most principal information of the input, and the following dimensions represent the residual information recursively. Inspired by it, we propose ordered product quantization (OPQ) to encode speech into a representation with this order along the stream axis.
+
+### Model Architecture
+
+#### Semantic Encoder
+
+> As shown in Fig. \ref{fig:socodec}, we first encode the speech signal into a semantic token sequence by employing a pre-trained self-supervised learning (SSL) model, HuBERT \cite{hsu2021hubert}. It encodes speech signals into embedding sequence $S$ with rich semantic information as the encoder input. The time-variant encoder based on ResNet blocks further processes this sequence and uses stridden convolutional layers for down-sampling to obtain a shorter encoding sequence. We then process this sequence with OPQ to obtain the ordered quantized sequence $Z$.
+
+#### Acoustic Encoder
+
+> Meanwhile, we also apply an ECAPA-TDNN-based \cite{dawalatabad2021ecapa} time-invariant encoder to extract an utterance-level global embedding $g$ from speech signals to preserve time-invariant information, e.g., speaker identity, global speaking style, acoustic environment, etc. This embedding can be used in speech reconstruction and imitate the target voice in zero-shot TTS. To avoid the leakage of content information into this embedding, we propose a simple pro-processing technique, ``Clip\&Shuffle", on the Mel spectrogram to remove short-time variant information from it. Specifically, we first sample a segment with a length of 25\% to 75\% of the utterance, and then chunk it into slices with the length of 1 second. Finally, these slices are shuffled randomly to form a new sequence. This simple approach effectively reduces content leakage, and avoids complicated disentangling techniques such as adversarial learning \cite{lajszczak2024base}.
+
+#### Decoder
+
+> In the decoder, the global embedding $g$ is duplicated and added with the quantized sequence $Z$ to form the decoder input. It is then processed by ResNet blocks with the transposed convolutional layers for up-sampling to reconstruct both SSL features and acoustic features. The discriminator proposed in Mega-TTS \cite{jiang2023mega} is applied in training to improve the generative quality of the Mel spectrogram. Finally. we employ a pre-trained Mel-spectrogram-based neural vocoder, BigVGAN \cite{bigvgan}, to generate the reconstructed audio. Notably, although the SSL feature is not applied to generate the audio, the training objective of minimizing the reconstruction loss of SSL features still matters in learning discrete semantic representations.
+
+#### Loss Function
+
+> The loss function of SoCodec is written as follows:
+
+$$
+\begin{aligned}
+    \mathcal{L}_c &= \lambda_1 * \left \| Z - \tilde{Z} \right \|^2_2 + \lambda_2 * \left \| S - \hat{S} \right \|^2_2 \\
+    & + \lambda_3 * \left \| A - \hat{A} \right \|^2_2 + \lambda_4 * \left \| 1 - D(\hat{A}) \right \|^2_2
+\end{aligned}
+$$
+
+> where $\lambda_1, \lambda_2, \lambda_3, \lambda_4$ are weight coefficients. $\left \| Z - \tilde{Z} \right \|^2_2$ is the VQ loss between the quantized sequence $Z$ and the encoding sequence $\tilde{Z}$ before the quantization. $\left \| S - \hat{S} \right \|^2_2$ is the semantic loss between the SSL features $S$ and the reconstructed ones $\hat{S}$. Finally, the acoustic loss is composed of two terms: the L2 loss between the ground-truth Mel spectrogram $A$ and the reconstructed one $\hat{A}$, and an adversarial loss, where $D(*)$ denotes outputs of all discriminators. Meanwhile, discriminators are trained alternately with codec.
+
+### Multi-Stream LM
+
+#### Model Architecture
+
+> In this work, we adopt a GPT-2-based \cite{radford2019language} decoder-only Transformer to construct a multi-stream LM, as shown in Fig. \ref{fig:lm}. In training, we first extract semantic tokens and global (reference) embedding from the target speech via the pre-trained SoCodec. Then, the reference embedding, text, and speech, are mapped into the embedding space with the same dimension. All streams of the speech sequence are processed respectively and then added together. The text sequence and speech sequence are added with different learnable positional embeddings. Then, we process this embedding sequence with a stack of causal Transformer layers, and predict probabilities of speech tokens with a group of linear layers. The loss function of multi-stream LM is the averaged cross-entropy loss across all streams of the speech sequence.
+
+#### Delay Prediction
+
+> An ideal LM for multi-stream representations is to predict the joint distribution of all streams in an auto-regressive manner:
+
+$$
+\begin{aligned}
+    P(y_{t, 1:m}|y_{1: t-1, 1: m}, x)
+\end{aligned}
+$$
+
+> where $m$ and $x$ are the number of streams and the input, i.e. the text and the reference embedding in our work. It requires integrating all tokens at the same frame into one token corresponding to a giant dictionary, which is impossible to achieve. Hence, we usually adopt the chain rule, i.e.:
+
+$$
+\begin{aligned}
+    \prod^m_{j=1}P(y_{t, j}|y_{t, 1: j-1}, y_{1: t-1, 1: m}, x)
+\end{aligned}
+$$
+
+> we can achieve this by flattening all streams into one sequence, but it also multiplies the length of the sequence, going against our intention of using multi-stream representations. The delayed prediction breaks the dilemma effectively and has shown superior performance in music and speech generation \cite{copet2024simple, kharitonov2022text}. It shifts the $j$-th stream with $d * (j-1)$ frames for all streams, where $d$ is the pre-designed number of delayed steps. In this way, the objective of LM is changed to:
+
+$$
+\begin{aligned}
+\label{eq:delay}
+    \prod^m_{j=1}P(y_{t, j}|&y_{1: t - 1 + d*(j - 1), 1}, y_{1: t - 1 + d*(j - 2), 2}, \\
+    & ..., y_{1: t - 1 + d*(j - m), m}, x)
+\end{aligned}
+$$
+
+> This approach allows us to predict multiple tokens in parallel while keeping chain-rule prediction from low to high streams. However, this pattern also causes missing high-stream information in low-stream prediction and more accumulated errors in high-stream prediction. Specifically, when generating low-stream tokens, the model cannot see full information on high streams from the past. For example, $y_{3,4}$ is unseen when generating $y_{4, 1}$. Moreover, the accumulated errors from the auto-regressive prediction lead to more noise in the high-stream prediction. Hence, an ordered representation is necessary for this multi-stream LM to ensure that principal speech information is preserved and predicted in low streams for a high-quality and stable generation.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
