--- a/Models/Speech_LLM/2024.09.11_SSR-Speech.md
+++ b/Models/Speech_LLM/2024.09.11_SSR-Speech.md
@@ -70,6 +70,76 @@
 
 ## 3.Methodology: 方法
 
+> SSR-Speech introduces a causal Transformer decoder \cite{DBLP:conf/nips/VaswaniSPUJGKP17} that takes both text tokens and audio neural codec tokens as input and predicts the masked audio tokens in a language modeling manner.
+
+### Modeling
+
+> Given a speech signal, the Encodec model \cite{DBLP:journals/tmlr/DefossezCSA23} is first applied to quantize it into discrete tokens $A = \{a_1, a_2, ..., a_{T}\}$, where $T$ represents the length of the audio tokens, and each token $a_i = \{a_{i,1}, a_{i,2}, ..., a_{i,K}\}$ corresponds to $K$ codebooks of the Encodec.
+>
+> As shown in Fig.~\ref{fig:1}, during training, we randomly mask $P$ continuous spans of the audio (\textit{e.g.} $P=1$ in Fig.~\ref{fig:1}). The masked tokens are concatenated with special tokens $[m_1],[m_2],...,[m_P]$, each followed by a special token $[eog]$. The unmasked tokens, also known as context tokens, are similarly concatenated with the special tokens $[m_1],[m_2],...,[m_P]$, with additional special tokens $[sos]$ and $[eos]$ at the beginning and end of the sequence, respectively. The entire set of audio tokens is then combined to form the new audio sequence $A^{\prime}=\{a^{\prime}_1, a^{\prime}_2, ..., a^{\prime}_{T^{\prime}}\}$, where $T^{\prime}$ represents the new length.
+>
+> We employ a Transformer decoder to autoregressively model the masked tokens, conditioned on the speech transcript, which is embedded as a phoneme sequence $Y = \{y_1, y_2, ..., y_{L}\}$, where $L$ is the length of the phoneme tokens. At each timestep $t$ in $A^{\prime}$, the model predicts $a^{\prime}_t$ using several linear layers, conditioned on the phoneme sequence $Y$ and all preceding tokens in $A^{\prime}$ up to $a^{\prime}_t$, denoted as $X_t$.
+
+$$
+\begin{aligned}
+    \mathbb{P}_\theta(A^{\prime} \mid Y)= \prod_t \mathbb{P}_\theta\left(a^{\prime}_t \mid Y, X_t\right)
+\end{aligned}
+$$
+
+> where $\theta$ denote the parameters of the model.
+
+> The training loss is defined as the negative log likelihood:
+
+$$
+\begin{aligned}
+    \mathcal{L}(\theta)=-\log \mathbb{P}_\theta(A^{\prime} \mid Y)
+\end{aligned}
+$$
+
+> Following \cite{DBLP:conf/acl/Peng00MH24}, we implement causal masking, delayed stacking, and apply larger weights to the first codebook than the later ones. Unlike \cite{DBLP:conf/acl/Peng00MH24}, we calculate the prediction loss only on the masked tokens, excluding special tokens, rather than on all tokens. This approach yields similar results while reducing training costs in our experiments. Additionally, we mask all regions of the audio, including the beginning and end of the speech, to better align with real-world applications. To further enhance TTS training, we also enforce speech continuation \cite{DBLP:conf/icassp/MaitiPCJC024} by consistently masking the end of the speech with a certain probability.
+
+### Inference
+
+> For the SE task, we compare the original transcript with the target transcript to identify the words that need to be masked. Using word-level forced alignment\footnote{https://github.com/MontrealCorpusTools/Montreal-Forced-Aligner} of the original transcript, we locate the corresponding masked spans of audio tokens. The phoneme tokens from the target transcript and the unmasked audio tokens are then concatenated and fed into the SSR-Speech model to autoregressively predict new audio tokens. Similar to \cite{DBLP:conf/acl/Peng00MH24}, when editing speech, the neighboring words surrounding the span to be edited also need to be slightly adjusted to accurately model co-articulation effects. Thus, we introduce a small margin hyperparameter $\alpha$, extending the length of the masked span by $\alpha$ on both the left and right sides.
+>
+> For the TTS task, the transcript of a voice prompt is combined with the target transcript of the speech to be generated. Along with the audio tokens of the voice prompt, these inputs are fed into the SSR-Speech model.
+>
+> Due to the stochastic nature of autoregressive generation, the model occasionally produces excessively long silences or drags out certain sounds, resulting in unnatural-sounding speech. Previous methods address this issue by generating multiple output utterances using different random seeds and discarding the longest ones, but this approach is unstable and time-consuming. In this paper, we propose to use classifier-free guidance (CFG) \cite{ho2021classifierfree} to resolve this problem.
+>
+> CFG is particularly useful in controlling the trade-off between fidelity to the input and the quality or creativity of the output for diffusion models, also used in AR generation \cite{DBLP:conf/iclr/KreukSPSDCPTA23}.
+> Existing methods involves training the model in two modes: conditioned and unconditioned, learning both how to generate general outputs and how to generate outputs that match a specific conditioning input.
+> During inference, CFG guides the model by combining the outputs from the conditioned and unconditioned modes. 
+> In our initial experiments, we found that traditional CFG cannot solve the dead loop of AR models well, and it may make the training unstable at the beginning.
+> To address this issue, we propose to use inference-only CFG that we do not need unconditioned training. More specifically, at inference time we use a random text sequence as the unconditional input, and sample from a distribution obtained by a linear combination of the conditional and unconditional probabilities.
+> Formally we sample from,
+
+$$
+\begin{align}
+\gamma \mathbb{P}_\theta(A^{\prime} \mid Y) + (1-\gamma)\mathbb{P}_\theta(A^{\prime} \mid Y^{\prime})
+\end{align}
+$$
+
+> where $\gamma$ is the guidance scale and $Y^{\prime}$ is a random phoneme sequence with the same length of $Y$ to enable GPU parallel processing.
+
+### Watermark Encodec
+
+> In this section, we introduce the watermark Encodec, a neural codec model specifically designed for the SE task, capable of watermarking the generated audio and better preserving the unedited regions. Watermark Encodec can also be applied to the TTS task. As shown in Fig.~\ref{fig:2}, the watermark Encodec consists of a speech encoder, a quantizer, a speech decoder, a masked encoder, and a watermark predictor.
+
+#### Watermarking (WM)
+
+> The speech encoder shares the same network architecture as the encoder in Encodec. The watermark predictor also adopts the same architecture as the Encodec encoder, with the addition of a final linear layer for binary classification. We first pretrain the Encodec\footnote{https://github.com/facebookresearch/audiocraft} model and initialize the parameters of the speech encoder and watermark predictor using the pretrained Encodec encoder parameters. The quantizer is identical to the Encodec quantizer, with the same parameters copied over.
+>
+> The speech decoder, which takes watermarks and audio codes as input, reconstructs the speech and shares the same architecture as the Encodec decoder. The only difference is extra linear layers to project the combined features into the same dimension as the audio features. We also initialize the speech decoder's parameters from the Encodec model. During training, the speech encoder and quantizer are frozen. The watermark is a binary sequence with the same length as the audio frames output by the speech encoder, where masked frames are marked with a value of 1, and unmasked frames are marked with 0.
+> An embedding layer is applied to the watermarks to obtain the watermark features.
+
+#### Context-Aware Decoding (CD)
+
+> Encodec reconstructs the waveform using audio codes. However, for the SE task, it's crucial that the unedited spans of the speech remain unchanged. To better utilize the information from these unedited spans during decoding, we propose a context-aware decoding method, which uses the original unedited waveform as an additional input to the watermark Encodec decoder.
+>
+> Specifically, we mask the edited segments of the original waveform with silence clips and then use a masked encoder to extract the features from this masked waveform. The masked encoder shares the same architecture as the Encodec encoder and is initialized with parameters from Encodec. Consequently, the input to the speech decoder includes the audio codes, the watermarks, and the masked features.
+>
+> Moreover, we found that using skip connections \cite{DBLP:conf/miccai/RonnebergerFB15} improves reconstruction quality and accelerates model convergence. Therefore, we fuse multi-scale features between each block, following the approach used in UNet \cite{DBLP:conf/miccai/RonnebergerFB15}.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
