--- a/Models/Speech_LLM/2024.09.11_SSR-Speech.md
+++ b/Models/Speech_LLM/2024.09.11_SSR-Speech.md
@@ -142,6 +142,41 @@ $$
 
 ## 4.Experiments: 实验
 
+> For the SSR-Speech model, we use the Gigaspeech XL set \cite{DBLP:conf/interspeech/ChenCWDZWSPTZJK21} as the training data, which contains 10k hours of audio at a 16kHz sampling rate. Audio files shorter than 2 seconds or longer than 15 seconds are excluded. The Encodec model and the Watermark Encodec model are trained on the Gigaspeech M set, comprising 1k hours of audio data.
+>
+> For the zero-shot SE task, we use the RealEdit dataset \cite{DBLP:conf/acl/Peng00MH24}, which includes 310 manually-crafted speech editing examples. For the zero-shot TTS task, we construct a dataset of 500 prompt-transcript pairs from the LibriTTS test set \cite{DBLP:conf/interspeech/ZenDCZWJCW19}. The voice prompts are between 2.5 and 4 seconds in length, and the target transcripts are randomly selected from different utterances across the entire LibriTTS test set.
+
+### Data
+
+> For the SSR-Speech model, we use the Gigaspeech XL set \cite{DBLP:conf/interspeech/ChenCWDZWSPTZJK21} as the training data, which contains 10k hours of audio at a 16kHz sampling rate. Audio files shorter than 2 seconds or longer than 15 seconds are excluded. The Encodec model and the Watermark Encodec model are trained on the Gigaspeech M set, comprising 1k hours of audio data.
+>
+> For the zero-shot SE task, we use the RealEdit dataset \cite{DBLP:conf/acl/Peng00MH24}, which includes 310 manually-crafted speech editing examples. For the zero-shot TTS task, we construct a dataset of 500 prompt-transcript pairs from the LibriTTS test set \cite{DBLP:conf/interspeech/ZenDCZWJCW19}. The voice prompts are between 2.5 and 4 seconds in length, and the target transcripts are randomly selected from different utterances across the entire LibriTTS test set.
+
+### Setups
+
+> Following \cite{DBLP:conf/acl/Peng00MH24}, both the Encodec and Watermark Encodec models use 4 RVQ codebooks, each with a vocabulary size of 2048. They operate with a stride of 320 samples, resulting in a codec framerate of 50Hz for audio recorded at a 16kHz sampling rate. The base dimension is 64, doubling at each of the 5 convolutional layers in the encoder.
+> The number of spans to be masked, denoted as $P$, is uniformly sampled between 1 and 3. The maximum masking length is set to $90\%$ of the original audio length. During training, we apply a probability of 0.5 to enhance TTS training. Text transcripts are phonemized using an IPA phoneset toolkit\footnote{https://github.com/bootphon/phonemizer} \cite{DBLP:journals/jossw/BernardT21a}.
+>
+> The SSR-Speech model has the same architecture as VoiceCraft, which consists of 16 Transformer layers with hidden size of 2048 and 12 attention heads. The output of the final layer is passed through four separate 2-layer MLP modules to generate prediction logits. Following VoiceCraft, we employ the ScaledAdam optimizer and Eden scheduler \cite{DBLP:journals/corr/abs-2401-07333}, with a base learning rate of 0.05, a batch size of 400k frames, and a total of 50k training steps with gradient accumulation. The weighting hyperparameters for the 4 codebooks are set to $(5, 1, 0.5, 0.1)$. The SSR-Speech model has 830M parameters and was trained on 8 NVIDIA V100 GPUs for 2 weeks.
+>
+> For inference, we use nucleus sampling \cite{DBLP:conf/iclr/HoltzmanBDFC20} with $p = 0.8$ and a temperature of 1. The extended masked span $\alpha$ is set to $0.12$ seconds. Based on initial experiments, we determined the optimal value for the hyperparameter $\gamma$ to be $1.5$.
+
+### Baselines
+
+> For the SE task, we compare SSR-Speech with the state-of-the-art model VoiceCraft and a diffusion-based model FluentSpeech.
+> For the TTS task, we compare SSR-Speech with state-of-the-art autoregressive models, including VALL-E, Phonme \cite{DBLP:journals/corr/abs-2401-02839} and VoiceCraft.
+> For a fair comparison, we take the original VoiceCraft\footnote{https://github.com/jasonppy/VoiceCraft} and Phonme\footnote{https://github.com/PolyAI-LDN/pheme} that were trained on the GigaSpeech dataset, and train FluentSpeech\footnote{https://github.com/Zain-Jiang/Speech-Editing-Toolkit} and VALL-E\footnote{https://github.com/open-mmlab/Amphion/tree/main/models/tts/valle} on the GigaSpeech dataset.
+
+### Metrics
+
+> Following prior studies, we use WER and SIM as objective evaluation metrics, calculated with pre-trained Whisper-medium.en\footnote{https://huggingface.co/openai/whisper-medium.en} \cite{DBLP:conf/icml/RadfordKXBMS23} and WavLM-TDCNN\footnote{https://huggingface.co/microsoft/wavlm-base-plus-sv} \cite{DBLP:journals/jstsp/ChenWCWLCLKYXWZ22} models for speech and speaker recognition, respectively. Additionally, we employ MOSNet\footnote{https://github.com/nii-yamagishilab/mos-finetune-ssl} \cite{DBLP:conf/icassp/CooperHTY22} to estimate an objective MOS score for reference.
+>
+> For the SE task, we also report MOS estimates for noisy test samples with estimated SNRs below $20$ dB using the Brouhaha\footnote{https://github.com/marianne-m/brouhaha-vad} \cite{DBLP:conf/asru/LavechinMTBCRBCDB23} (MOSNet-N), which includes $36$ samples in the RealEdit dataset.
+> In addition, we test MOS estimates for multi-span editing in the RealEdit dataset (MOSNet-M), in which we have $40$ samples with $2$-span editing in total.
+>
+> For subjective evaluation, we invited $20$ listeners to conduct MOS and Similar MOS (SMOS) assessments, using $60$ randomly selected samples from the RealEdit and LibriTTS test sets.
+> We report all these metrics with $95\%$ confidence interval.
+
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
