--- a/Models/Speech_LLM/2024.09.11_SSR-Speech.md
+++ b/Models/Speech_LLM/2024.09.11_SSR-Speech.md
@@ -179,4 +179,22 @@ $$
 
 ## 5.Results: 结果
 
+> Table \ref{tab:result1} presents the results of the speech editing evaluations on RealEdit. 
+> SSR-Speech outperforms the baselines across all metrics. From the ablation studies, we observed that CFG significantly contributes to the performance improvement, effectively resolving the long silence issue in the AR model. From the MOSNet-M results, this advantage is especially pronounced in multi-span editing. Comparing with VoiceCraft that would run inference for 10 times using different margin parameters, our proposed SSR-Speech is able to inference once and obtain a stable result.
+>
+> Context-aware decoding (CD) also enhances performance, particularly in speech with background sounds, as the unedited spans provide additional context for the model.
+> Therefore, SSR-Speech with CD gets much better MOSNet-N results than the others.
+> While watermarking (WM) does not impact performance, it adds frame-level watermarks to the synthesized audio, increasing the model's security.
+>
+> Consistent with previous work \cite{DBLP:journals/corr/abs-2406-04840,DBLP:conf/icml/RomanFEDFT24}, we found that our watermark detector achieves a binary classification accuracy of $99.9\%$ for detecting watermarks, demonstrating a strong ability to distinguish which parts of an audio sample have been edited by SSR-Speech.
+>
+> Table~\ref{tab:result2} reports the results of TTS evaluations on LibriTTS.
+> SSR-Speech demonstrates strong performance across multiple metrics, indicating that it produces high-quality, natural-sounding speech with excellent speaker similarity. 
+> Compared to VoiceCraft, we attribute the performance improvement primarily to the TTS-enhanced training and the inference-only CFG in SSR-Speech.
+
 ## 6.Conclusions: 结论
+
+> In this paper, we proposed SSR-Speech, a stable, safe, and robust zero-shot text-based SE and TTS model. SSR-Speech is a neural codec language model, which ensures strong inference stability and robustness for multi-span editing and background noise. We also introduced a watermark Encodec model to embed watermarks in the generated speech. Experiments on RealEdit and LibriTTS show that  SSR-Speech could achieve the state-of-the-art results.
+> Furthermore, we experimented with training SSR-Speech on Mandarin data, and the model demonstrated solid performance in the Mandarin language.
+> To facilitate speech generation and AI safety research, we fully open source our model weights.
+> For future works, we plan to: (i) explore more advanced neural codec models, (ii) expand to other generation tasks such as instructive TTS and voice conversion, (iii) scale up training on larger datasets and more languages, and (iv) investigate editing the prosody of speech.
