--- a/Models/Diffusion/2024.06.17_DiTTo-TTS.md
+++ b/Models/Diffusion/2024.06.17_DiTTo-TTS.md
@@ -61,8 +61,8 @@
 ## 1.Introduction: 引言
 
 > Large-scale diffusion models have demonstrated impressive generative abilities in a wide range of fields including images [1], [2], videos [3], [4], and audio ([WaveGrad](../../Models/TTS3_Vocoder/2020.09.02_WaveGrad.md); [DiffWave](../TTS3_Vocoder/2020.09.21_DiffWave.md)).
-> The integration of [latent diffusion models (LDMs)](../../Models/_Basis/2021.12.20_LDM.md) further amplifies their popularity [8], [9], [10], as these models significantly enhance computational efficiency.
-> This efficiency is achieved through the reduction of input dimensionality using autoencoders, which also enables the diffusion models to focus on the most critical features of data ([LDM](../../Models/_Basis/2021.12.20_LDM.md)).
+> The integration of [latent diffusion models (LDMs)](2021.12.20_LDM.md) further amplifies their popularity [8], [9], [10], as these models significantly enhance computational efficiency.
+> This efficiency is achieved through the reduction of input dimensionality using autoencoders, which also enables the diffusion models to focus on the most critical features of data ([LDM](2021.12.20_LDM.md)).
 > However, applying LDMs to text-to-speech (TTS) presents unique challenges because TTS requires precise alignment between text and generated speech over time.
 > Hence, their application to TTS often requires a complex pipeline, incorporating speech domain-specific modeling such as phoneme and duration ([Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md), [NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md)).
 > Without these components, generation performance tends to be suboptimal ([Simple-TTS](../../Models/_tmp/Simple-TTS.md), [E3-TTS](2023.11.02_E3_TTS.md)), while their inclusion hinders the model efficiency and scalability.
@@ -71,7 +71,7 @@
 > Our method addresses the challenge of aligning text and speech solely through cross-attention mechanisms.
 > Furthermore, we introduce a module that predicts the total duration of the generated speech from a given text and speech prompt, rather than determining the duration of each individual input token.
 > To accomplish this, we conduct a network architecture ablation to identify a model specifically suited for TTS applications.
-> Consequently, we adopt the [Diffusion Transformer (DiT)](../_Basis/DiT.md) to TTS, naming our method ***DiTTo-TTS*** (or simply ***DiTTo***).
+> Consequently, we adopt the [Diffusion Transformer (DiT)](DiT.md) to TTS, naming our method ***DiTTo-TTS*** (or simply ***DiTTo***).
 > We also explore the significance of leveraging aligned text and speech representations, showing that performance can be enhanced by either using a text encoder jointly trained with speech data or a speech autoencoder with an auxiliary language modeling objective alongside the reconstruction objective.
 
 > Our comprehensive experiments on English-only and multilingual evaluation demonstrate that our model not only simplifies the training process but also achieves superior or comparable zero-shot performance to state-of-the-art models in terms of naturalness, intelligibility, and speaker similarity.
@@ -89,15 +89,15 @@
 > Although this approach removes the need for cascaded modeling ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md)) to manage the number of token streams, their resource-intensive inference processes limit their applications [30].
 > On the other hand, Non-AR generative models are employed to enhance the efficiency of TTS systems.
 > [VoiceBox](../../Models/Speech_LLM/2023.06.23_VoiceBox.md) utilizes a flow matching [32] to generate speech, effectively casting the TTS task into a speech infilling task.
-> NaturalSpeech series ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)), building upon recent advances in the [Latent Diffusion Model (LDM)](../../Models/_Basis/2021.12.20_LDM.md), incorporate auxiliary modules for controllability of various speech attribute such as content, prosody, and timbre.
+> NaturalSpeech series ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md), [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)), building upon recent advances in the [Latent Diffusion Model (LDM)](2021.12.20_LDM.md), incorporate auxiliary modules for controllability of various speech attribute such as content, prosody, and timbre.
 > However, requiring supplementary data beyond speech-transcription pairs hinders scalability.
 > [Simple-TTS](../../Models/_tmp/Simple-TTS.md) simplifies the data preparation and training process by removing auxiliary modules and the need for phoneme-level durations.
 > Similarly, [E3-TTS](2023.11.02_E3_TTS.md) follows this approach but does not utilize a pre-trained latent autoencoder.
 > However, both models have limitations in audio quality and impose a fixed length on the target audio, which is a significant constraint for speech generation.
 
 > ### Latent Diffusion Model (LDM) 
-> [LDM](../../Models/_Basis/2021.12.20_LDM.md) improves modeling efficiency of the diffusion process model [1], [34] by operating in a latent space, achieving remarkable performance in generating realistic samples.
-> Initially applied in image generation, their success is attributed to the reduced dimensionality of the latent space, facilitating efficient training and sampling ([LDM](../../Models/_Basis/2021.12.20_LDM.md)).
+> [LDM](2021.12.20_LDM.md) improves modeling efficiency of the diffusion process model [1], [34] by operating in a latent space, achieving remarkable performance in generating realistic samples.
+> Initially applied in image generation, their success is attributed to the reduced dimensionality of the latent space, facilitating efficient training and sampling ([LDM](2021.12.20_LDM.md)).
 > Notably, guided diffusion [35], [36] has been expanded to various applications of LDMs, such as image editing [37] and image retrieval [38].
 > In the field of audio signals, techniques such as style transfer, inpainting, and super-resolution have been explored, along with text-guided audio and speech generation [39], [40].
 > In the context of TTS, however, applying LDMs to TTS ([NaturalSpeech2](../../Models/Diffusion/2023.04.18_NaturalSpeech2.md); [NaturalSpeech3](../../Models/Diffusion/2024.03.05_NaturalSpeech3.md)) necessitates domain-specific elements such as phonemes, phoneme-level durations, and pitch.
@@ -138,8 +138,8 @@
 > They define a forward process that progressively adds Gaussian noise to the input data as time step increases.
 > The reverse generative process then estimates the added noise to reconstruct the original data.
 > Conditional diffusion models enhance this framework by incorporating additional information, such as text descriptions in text-to-image generation [35], [45] or phonemes and their durations in TTS ([Grad-TTS](../../Models/TTS2_Acoustic/2021.05.13_Grad-TTS.md)), [46].
-> While diffusion models can operate directly on real-world data, many of them are applied in the latent space ([LDM](../../Models/_Basis/2021.12.20_LDM.md); [8], [10], [47].
-> Thanks to the reduced dimensionality, this approach improves computational efficiency and output quality by allowing diffusion models to focus on the semantic information of the data while the autoencoder handles the high-frequency details that are less perceptible ([LDM](../../Models/_Basis/2021.12.20_LDM.md)).
+> While diffusion models can operate directly on real-world data, many of them are applied in the latent space ([LDM](2021.12.20_LDM.md); [8], [10], [47].
+> Thanks to the reduced dimensionality, this approach improves computational efficiency and output quality by allowing diffusion models to focus on the semantic information of the data while the autoencoder handles the high-frequency details that are less perceptible ([LDM](2021.12.20_LDM.md)).
 
 </details>
 <br>
