--- a/Models/Diffusion/2023.04.18_NaturalSpeech2.md
+++ b/Models/Diffusion/2023.04.18_NaturalSpeech2.md
@@ -5,25 +5,25 @@
 
 - 标题: NaturalSpeech 2: Latent Diffusion Models are Natural and Zero-Shot Speech and Singing Synthesizers
 - 作者:
-  - 01 [Kai Shen](../../Authors/Kai_Shen_(沈锴).md)
-  - 02 [Zeqian Ju](../../Authors/Zeqian_Ju_(琚泽谦).md)
-  - 03 [Xu Tan](../../Authors/Xu_Tan_(谭旭).md)
-  - 04 [Yanqing Liu](../../Authors/Yanqing_Liu.md)
-  - 05 [Yichong Leng](../../Authors/Yichong_Leng.md)
-  - 06 [Lei He](../../Authors/Lei_He_(何磊).md)
-  - 07 [Tao Qin](../../Authors/Tao_Qin_(秦涛).md)
-  - 08 [Sheng Zhao](../../Authors/Sheng_Zhao_(赵胜).md)
-  - 09 [Jiang Bian](../../Authors/Jiang_Bian_(边江).md)
+  - 01 Kai Shen (沈锴)
+  - 02 Zeqian Ju (琚泽谦)
+  - 03 Xu Tan 谭旭
+  - 04 Yanqing Liu
+  - 05 Yichong Leng
+  - 06 Lei He (何磊)
+  - 07 Tao Qin (秦涛)
+  - 08 Sheng Zhao (赵胜)
+  - 09 Jiang Bian (边江)
 - 机构:
-  - [ICLR 2024](../../Publications/ICLR.md)
+  - 01
 - 时间:
   - 预印时间: 2023.04.18 ArXiv v1
   - 预印时间: 2023.05.04 ArXiv v2
   - 预印时间: 2023.05.30 ArXiv v3
   - 发表时间: 2024.01.16
-  - 更新笔记: 2024.06.25
+  - 更新笔记: 2024.09.14
 - 发表:
-  - 期刊/会议
+  - [ICLR 2024](../../Publications/ICLR.md)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2304.09116)
   - [DOI](https://openreview.net/forum?id=Rc7dAwVL3v)
