--- a/Models/Speech_LLM/2024.09.11_SSR-Speech.md
+++ b/Models/Speech_LLM/2024.09.11_SSR-Speech.md
@@ -228,7 +228,7 @@ $$
 ### Metrics
 
 > Following prior studies, we use WER and SIM as objective evaluation metrics, calculated with pre-trained Whisper-medium.en\footnote{https://huggingface.co/openai/whisper-medium.en} \cite{DBLP:conf/icml/RadfordKXBMS23} and WavLM-TDCNN\footnote{https://huggingface.co/microsoft/wavlm-base-plus-sv} \cite{DBLP:journals/jstsp/ChenWCWLCLKYXWZ22} models for speech and speaker recognition, respectively. 
-> Additionally, we employ MOSNet\footnote{https://github.com/nii-yamagishilab/mos-finetune-ssl} \cite{DBLP:conf/icassp/CooperHTY22} to estimate an objective MOS score for reference.
+> Additionally, we employ [MOSNet](../../Evaluations/MOSNet.md) \footnote{https://github.com/nii-yamagishilab/mos-finetune-ssl} \cite{DBLP:conf/icassp/CooperHTY22} to estimate an objective MOS score for reference.
 >
 > For the SE task, we also report MOS estimates for noisy test samples with estimated SNRs below $20$ dB using the Brouhaha\footnote{https://github.com/marianne-m/brouhaha-vad} \cite{DBLP:conf/asru/LavechinMTBCRBCDB23} (MOSNet-N), which includes $36$ samples in the RealEdit dataset.
 > In addition, we test MOS estimates for multi-span editing in the RealEdit dataset (MOSNet-M), in which we have $40$ samples with $2$-span editing in total.
