--- a/Models/TTS3_Vocoder/2024.08.13_VNet.md
+++ b/Models/TTS3_Vocoder/2024.08.13_VNet.md
@@ -5,12 +5,12 @@
 
 - 标题:
 - 作者:
-  - 01 [Yubing Cao](../../Authors/Yubing_Cao.md)
-  - 02 [Yongming Li](../../Authors/Yongming_Li.md)
-  - 03 [Liejun Wang](../../Authors/Liejun_Wang.md)
-  - 04 [Yinfeng Yu](../../Authors/Yinfeng_Yu.md)
+  - 01 Yubing Cao
+  - 02 Yongming Li
+  - 03 Liejun Wang
+  - 04 Yinfeng Yu
 - 机构:
-  - [新疆大学](../../Institutions/CHN-XJU.md)
+  - 新疆大学
 - 时间:
   - 预印时间: 2024.08.13 ArXiv v1
   - 更新笔记: 2024.08.15
