--- a/Models/E2E/2023.12.03_OpenVoice.md
+++ b/Models/E2E/2023.12.03_OpenVoice.md
@@ -18,7 +18,7 @@
   - 预印时间: 2023.12.13 ArXiv v2
   - 预印时间: 2023.12.16 ArXiv v3
   - 预印时间: 2023.12.21 ArXiv v4
-  - 预印时间: 2024.01.02 ArXiv v5
+  - 预印时间: 2024.01.02 ArXiv v5 (基于此版本)
   - 预印时间: 2024.08.18 ArXiv v6
   - 更新笔记: 2024.09.16
 - 发表:
